modules/core/client/css/core.css
.content {
  margin-top: 50px;
}
.undecorated-link:hover {
  text-decoration: none;
}
[ng\:cloak],
[ng-cloak],
[data-ng-cloak],
[x-ng-cloak],
.ng-cloak,
.x-ng-cloak {
  display: none !important;
}
.ng-invalid.ng-dirty {
  border-color: #FA787E;
}
.ng-valid.ng-dirty {
  border-color: #78FA89;
}
.header-profile-image {
  opacity: 0.8;
  height: 28px;
  width: 28px;
  border-radius: 50%;
  margin-right: 5px;
}
.open .header-profile-image,
a:hover .header-profile-image {
  opacity: 1;
}
.user-header-dropdown-toggle {
  padding-top: 11px !important;
  padding-bottom: 11px !important;
}

button.studypage {
  position: relative;
  bottom: 9px;
}

.container {
  position: relative;
  padding: 0 5px 0 225px;
  margin: 0 0 0 0;
  width: 100%;
}

#sidebar {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  width: 220px;
  background: #A0A0A0;
  border-right: 1px solid #000;
  padding-top: 55px;
}

#header {
  margin: 0 0 0 0;
  position: absolute;
}

#content {
  border: 1px solid #A0A0A0;
  margin: 5px 0 5px 0;
  width: 100%;

}

#section-tabs {
  list-style: none;
  margin: 0;
  padding: 0;


}

